split version working. can now do inference when constraint true/false

--- a/conin/mediation_variables/Viterbi_clean.ipynb
+++ b/conin/mediation_variables/Viterbi_clean.ipynb
@@ -341,9 +341,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conin(stable)",
+   "display_name": "clio(stable)",
    "language": "python",
-   "name": "conin"
+   "name": "clio"
   },
   "language_info": {
    "codemirror_mode": {
