--- a/conin/mediation_variables/Viterbi_v2.ipynb
+++ b/conin/mediation_variables/Viterbi_v2.ipynb
@@ -145,7 +145,7 @@
    "source": [
     "### Inference when the Constraint is Satisfied\n",
     "\n",
-    "Here, we constrain $C=1$: $a$ must happen before $c$. As predicted, when encountering an initial sequence of $C$'s, our model choose $b$ since $c$ is not allowed and $b$ has a higher chance of emitting $C$. Provided the initial number of $C$'s is at most 2, we'll see this behavior. We can increase the admissable length of $b$'s by decreasing the emission probabilities $a,A$ and $c,C$ if "
+    "Here, we constrain $C=1$: $a$ must happen before $c$. As predicted, when encountering an initial sequence of $C$'s, our model choose $b$ since $c$ is not allowed and $b$ has a higher chance of emitting $C$. Provided the initial number of $C$'s is at most 2, we'll see this behavior. We can increase the admissable length of $b$'s by decreasing the emission probabilities $a,A$ and $c,C$ if we want."
    ]
   },
   {
@@ -190,8 +190,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "572c5579-cda8-4dd4-b96b-36fc7f51967a",
+   "metadata": {},
+   "source": [
+    "### Inference when the COnstraint is NOT Satsified\n",
+    "\n",
+    "Now, we observe $C= 0$: that the constrain is not satisifed. It's logical negation is just that $c$ happens before $a$, and the inferene situation is symmetric. We see that encountering a small initial sequence of $A$'s makes us choose $b$ for the same reasons as above."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "id": "520adc93-6bb5-4539-8544-b898d42a82a9",
    "metadata": {},
    "outputs": [],
@@ -201,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "id": "2dc4716b-e43d-43c4-984e-c81ed6aea3f0",
    "metadata": {},
    "outputs": [],
@@ -211,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "id": "23d70283-173c-4f77-8a54-d16ab4171f71",
    "metadata": {},
    "outputs": [
@@ -221,7 +231,7 @@
        "['b', 'b', 'c', 'a', 'c', 'a', 'c']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,14 +239,6 @@
    "source": [
     "opt_state"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0b2abc97-363a-43c2-b037-32a301125650",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
