--- a/conin/mediation_variables/Constrained_EM.ipynb
+++ b/conin/mediation_variables/Constrained_EM.ipynb
@@ -827,7 +827,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conin(stable)",
+   "display_name": "conin",
    "language": "python",
    "name": "conin"
   },
@@ -841,7 +841,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
