--- a/conin/mediation_variables/Viterbi_v2.ipynb
+++ b/conin/mediation_variables/Viterbi_v2.ipynb
@@ -11,7 +11,8 @@
     "import warnings\n",
     "from munch import Munch\n",
     "import itertools\n",
-    "from mv_Viterbi import mv_Viterbi"
+    "from mv_Viterbi import mv_Viterbi\n",
+    "from cst_aggregate import cst_aggregate"
    ]
   },
   {
@@ -135,7 +136,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cst = Munch(aux_size = 2, update_fun = update_fun, init_fun = init_fun, cst_fun = cst_fun)"
+    "precedence_cst = Munch(name = 'a occurs before c',aux_size = 2, update_fun = update_fun, init_fun = init_fun, cst_fun = cst_fun)"
    ]
   },
   {
@@ -150,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "538fb16b-9480-47f3-a9a8-3b41238063ea",
    "metadata": {},
    "outputs": [],
@@ -160,17 +161,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "1c833975-3d43-4d05-954e-68683594ca69",
    "metadata": {},
    "outputs": [],
    "source": [
-    "opt_aug, opt_state = mv_Viterbi(obs, hmm, cst, sat = True)"
+    "opt_aug, opt_state = mv_Viterbi(obs, hmm, precedence_cst, sat = True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "09697322-d13c-486b-a8b8-918b6c397d8f",
    "metadata": {},
    "outputs": [
@@ -180,7 +181,7 @@
        "['b', 'b', 'a', 'c', 'a', 'c']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "520adc93-6bb5-4539-8544-b898d42a82a9",
    "metadata": {},
    "outputs": [],
@@ -211,17 +212,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "2dc4716b-e43d-43c4-984e-c81ed6aea3f0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "opt_aug, opt_state = mv_Viterbi(obs, hmm, cst, sat = False)"
+    "opt_aug, opt_state = mv_Viterbi(obs, hmm, precedence_cst, sat = False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "id": "23d70283-173c-4f77-8a54-d16ab4171f71",
    "metadata": {},
    "outputs": [
@@ -231,12 +232,260 @@
        "['b', 'b', 'c', 'a', 'c', 'a', 'c']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "opt_state"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "18c430ca-59ab-402b-a386-ce791e27f2a6",
+   "metadata": {},
+   "source": [
+    "# Occurence Constraint\n",
+    "\n",
+    "Now, we create anothe constraint class that enforce that state $b$ must be visited at some point. This is equivalent to replacing just one of $a$ or $c$ in the unconstrained MAP with $b$, at any time point."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "4f3ed901-d1fe-40c7-b95e-43b34c288b9e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def update_fun2(r,k , r_past):\n",
+    "    '''\n",
+    "    m1 = = tau_b or b . tracks if b has occured\n",
+    "    '''\n",
+    "    m1 = (k == 'b') or r_past[0]\n",
+    "\n",
+    "    return int(r == (m1,))\n",
+    "\n",
+    "def init_fun2(k, r):\n",
+    "    '''\n",
+    "    initial \"prob\" of r = m1,m2 from k. is just indicator\n",
+    "    '''\n",
+    "    m1 = k == 'b'\n",
+    "\n",
+    "    return int(r == (m1,))\n",
+    "    \n",
+    "def cst_fun2(r, sat):\n",
+    "    '''\n",
+    "    Constraint is a boolean emissions of the final auxillary state. In this case\n",
+    "    '''\n",
+    "    \n",
+    "    return int(r[0]  == sat) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "490d64d7-85d3-4e56-9087-45ca0372d6c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "occurence_cst = Munch(name = 'b must occur', aux_size = 1, update_fun = update_fun2, init_fun = init_fun2, cst_fun = cst_fun2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "4e432dda-f03a-4b8c-b8de-e580d4b6bf44",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "obs = ['C','C','A','C','A','C']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "bb7f0c6a-5e95-40b2-8314-3dc46ea1a753",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "opt_aug, opt_state = mv_Viterbi(obs, hmm, occurence_cst, sat = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "6fe66045-ea85-4921-8a7e-8156290d89b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['b', 'c', 'a', 'c', 'a', 'c']"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "opt_state"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0cdbe9c4-ee62-42c5-95dd-419099ca2102",
+   "metadata": {},
+   "source": [
+    "## Occurent Constraint is False\n",
+    "\n",
+    "If we condition on the constraint being false, this is equivalent to \"$b$ is never visited\". Since unconstrained inference will never return $b$, setting the constriant to be False will give the same answer as unconstrained inference."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "4e82a6e3-f11b-4dbd-8d0f-443e83a35a0d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "obs = ['C','C','A','C','A','C']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "93358122-24fc-43a3-836a-a9233af1aeb4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['c', 'c', 'a', 'c', 'a', 'c']"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "opt_aug, opt_state = mv_Viterbi(obs, hmm, occurence_cst, sat = False)\n",
+    "opt_state"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "173fdfa0-36f8-42c7-99a0-f903005b3dbd",
+   "metadata": {},
+   "source": [
+    "# Conditioning on Multiple Constraints and Their Values\n",
+    "\n",
+    "Now, we'll introduce both the precendence constraint \"$a$ happens before $c$\" and \"$b$ must happen at some point\" into our model. Again, these are modeled as binary emissions, so we can play with their truth configurations."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "ff76b0c7-8eb1-4b01-9e85-239552fceeef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cst_list = [precedence_cst,occurence_cst]\n",
+    "combined_cst = cst_aggregate(cst_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "03136381-8ed6-454b-a661-85e6166aa130",
+   "metadata": {},
+   "source": [
+    "# Both True\n",
+    "\n",
+    "First, we assume both constraints are true. Note that the below observation sequence is chosen so that the precendence constraint already makes $b$ appear first, so the occurence constraint is satsified automatically. Therefore, the answer should be the same as just conditioning on the precendence constraint"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "a7e31019-8ef4-4124-b4f5-b10df099fbf7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "obs = ['C','C','A','C','A','C']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "b04a6df1-08b2-4c52-9eb3-bc1bba2c7f6a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "opt_aug, opt_state = mv_Viterbi(obs, hmm, combined_cst, sat = (True,True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "e3d7509f-1a47-4a5a-8560-3497d5ae6e58",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['b', 'b', 'a', 'c', 'a', 'c']"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "opt_state"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "57b39aa0-37a1-45b0-8d12-d049e4106dbe",
+   "metadata": {},
+   "source": [
+    "### Precendence True, Occurence False\n",
+    "\n",
+    "Now here's an interesting scenario. The occurence constraint being unsatisfied is equivalent to $b$ never occuring. Now, when the precendence constraint kicks in, we can only choose $a$ or $c$. This means that any initial sequence of $C$ emissions is forced to return $a$, as opposed to $b$ if we were just enforcing the precendence constraint by itself."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "59a103e9-98af-4776-b92c-077c8791892c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "obs = ['C','C','A','C','A','C']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "84a86266-6199-4767-8e62-7ffee0911dc8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['a', 'c', 'a', 'c', 'a', 'c']"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "opt_aug, opt_state = mv_Viterbi(obs, hmm, combined_cst, sat = (True,False))\n",
     "opt_state"
    ]
   }
