some progress on EM algorithm. seems to work, need to test if it gives sensible answers

--- a/conin/mediation_variables/EM_v1.ipynb
+++ b/conin/mediation_variables/EM_v1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "id": "c5a243af-db56-44e7-af89-1782eec95667",
    "metadata": {},
    "outputs": [],
@@ -11,7 +11,7 @@
     "import warnings\n",
     "from munch import Munch\n",
     "import itertools\n",
-    "from mv_Viterbi import mv_Viterbi\n",
+    "import mv_EM as mv\n",
     "from cst_aggregate import cst_aggregate"
    ]
   },
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "id": "9c49caa1-f703-4878-9114-fc57cb03ab53",
    "metadata": {},
    "outputs": [],
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "id": "cefac4ef-bb55-41a3-bb1d-748192162043",
    "metadata": {},
    "outputs": [],
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "id": "182cffcc-729b-4c0d-babe-5050c249622a",
    "metadata": {},
    "outputs": [],
@@ -151,12 +151,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "id": "538fb16b-9480-47f3-a9a8-3b41238063ea",
    "metadata": {},
    "outputs": [],
    "source": [
     "obs = ['C','C','A','C','A','C']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "10aa2f18-d03a-45f0-8488-e54eeca5f964",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'mv_EM' from '/home/fyqiu/Projects/conin/conin/mediation_variables/mv_EM.py'>"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import importlib\n",
+    "importlib.reload(mv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "87800de1-0a15-446a-926a-e7dc06166695",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hmm_params, dat_prob = mv.mv_EM(obs, hmm, precedence_cst, sat = True)"
    ]
   },
   {
