light edits, pushing current work

--- a/conin/mediation_variables/EM_v1.ipynb
+++ b/conin/mediation_variables/EM_v1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "id": "c5a243af-db56-44e7-af89-1782eec95667",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "id": "9c49caa1-f703-4878-9114-fc57cb03ab53",
    "metadata": {},
    "outputs": [],
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "cefac4ef-bb55-41a3-bb1d-748192162043",
    "metadata": {},
    "outputs": [],
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "id": "182cffcc-729b-4c0d-babe-5050c249622a",
    "metadata": {},
    "outputs": [],
@@ -151,17 +151,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "id": "538fb16b-9480-47f3-a9a8-3b41238063ea",
    "metadata": {},
    "outputs": [],
    "source": [
-    "obs = ['C','C','A','C','A','C']"
+    "obs = ['C','C','A','C','A','C','C','C','A','A']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "id": "10aa2f18-d03a-45f0-8488-e54eeca5f964",
    "metadata": {},
    "outputs": [
@@ -171,7 +171,7 @@
        "<module 'mv_EM' from '/home/fyqiu/Projects/conin/conin/mediation_variables/mv_EM.py'>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,20 +183,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 27,
    "id": "87800de1-0a15-446a-926a-e7dc06166695",
    "metadata": {},
    "outputs": [],
    "source": [
-    "hmm_params, dat_prob = mv.mv_EM(obs, hmm, precedence_cst, sat = True)"
+    "hmm_params = mv.mv_EM(obs, hmm, precedence_cst, sat = True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
+   "id": "d7324f30-3f02-4ddd-82d0-5f148c472635",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.41368360e-015, 6.00211968e-013, 1.00000000e+000],\n",
+       "       [1.36631272e-001, 8.63368728e-001, 6.23147791e-203],\n",
+       "       [2.09138783e-001, 4.72691149e-001, 3.18170068e-001]])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hmm_params[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "1c833975-3d43-4d05-954e-68683594ca69",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'mv_Viterbi' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m opt_aug, opt_state \u001b[38;5;241m=\u001b[39m \u001b[43mmv_Viterbi\u001b[49m(obs, hmm, precedence_cst, sat \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'mv_Viterbi' is not defined"
+     ]
+    }
+   ],
    "source": [
     "opt_aug, opt_state = mv_Viterbi(obs, hmm, precedence_cst, sat = True)"
    ]
