--- a/conin/mediation_variables/Viterbi_clean.ipynb
+++ b/conin/mediation_variables/Viterbi_clean.ipynb
@@ -13,6 +13,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a9bc3a7e-11ce-4393-85b5-9597fdeb030d",
+   "metadata": {},
+   "source": [
+    "### Split Version. OLD. See the newer version \"Viterbi_v2\" for a more general formulation that allows you to play around with various truth configurations of the constraints."
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "07e1d748-75f6-4344-bac2-94e1e56c61f0",
