--- a/conin/mediation_variables/Viterbi_v2.ipynb
+++ b/conin/mediation_variables/Viterbi_v2.ipynb
@@ -12,7 +12,7 @@
     "from munch import Munch\n",
     "import itertools\n",
     "from mv_Viterbi import mv_Viterbi\n",
-    "from cst_aggregate import cst_aggregate"
+    "from cst_aggregate import cst_aggregatel"
    ]
   },
   {
@@ -20,13 +20,19 @@
    "id": "f58c62bd-0976-4c29-b411-0d77ffc33073",
    "metadata": {},
    "source": [
-    "# Split Version of Mediation Variables\n",
+    "# UnSplit Version of Mediation Variables\n",
     "\n",
     "The original formulation where we split a constraint across time added some complexity and, imporntantly, made it very hard to condition on the constraint being unsatsifies $C = 0$, since in the original $C=1$ was equivalent to setting every $C_t = 1$. In this version, we sidestep this issue by not splitting up $C$. For more info, refer to the notes on Overleaf.\n",
     "\n",
     "### The Model\n",
     "\n",
-    "Same as the other notebook, the HMM here is designed specifically to demonstrate the effects of constraints. We have a three state HMM $a,b,c$ with binary emissions $A,C$. As the names would suggest, $a$ and $c$ are very likely to emit $A$ and $C$ respecively, while $b$ emits both with equal probability. The intial distribution is also uniform over all 3 states.\n",
+    "Same as the other notebook, the HMM here is designed specifically to demonstrate the effects of constraints. We have a three state HMM $a,b,c$ with binary emissions $A,C$. As the names would suggest, $a$ and $c$ are very likely to emit $A$ and $C$ respecively, while $b$ emits both with equal probability. The intial distribution is also uniform over all 3 states. Here's a summary:\n",
+    "\n",
+    "1. Uniform transition matrix\n",
+    "2. Uniform initial distribution\n",
+    "3. Binary emissions with emission matrix. Rows $a,b,c,$ top-to-bottom, columns $A,C$ left-right: $$\\begin{bmatrix} .8 & .2\\\\ .5 & .5\\\\ .2 & .8 \\end{bmatrix}$$\n",
+    "\n",
+    "\n",
     "\n",
     "### The precedence constraint\n",
     "\n",
