--- a/conin/mediation_variables/working.ipynb
+++ b/conin/mediation_variables/working.ipynb
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "cefac4ef-bb55-41a3-bb1d-748192162043",
    "metadata": {},
    "outputs": [],
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "182cffcc-729b-4c0d-babe-5050c249622a",
    "metadata": {},
    "outputs": [],
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "30ee9e8c-8aab-421e-bea7-65415e474c7e",
    "metadata": {},
    "outputs": [],
@@ -680,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 8,
    "id": "b3ac1c1b-5dc8-4259-9780-80b764664cf5",
    "metadata": {},
    "outputs": [],
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 9,
    "id": "443ddb65-d624-4ee1-b121-07409bd86df6",
    "metadata": {},
    "outputs": [],
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 10,
    "id": "17ff2909-ae41-4c13-a9f2-f7284b72e74c",
    "metadata": {},
    "outputs": [],
@@ -820,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 61,
    "id": "c45ec1d5-f157-4fb4-b430-e5aad6566342",
    "metadata": {},
    "outputs": [],
@@ -828,101 +828,136 @@
     "def mv_EM(obs,hmm,cst,sat=True, conv_tol = 1e-10, max_iter = 1000, emit_opt = None):\n",
     "\n",
     "    #Convert everything into numpy arrays\n",
-    "    old_hmm_params, old_cst_params = arrayConvert(obs, hmm, cst, sat)\n",
+    "    old_hmm_params, cst_params = arrayConvert(obs, hmm, cst, sat)\n",
     "    emit_weights = compute_emitweights(obs,hmm)\n",
     "    conv  = 999\n",
     "    it = 0\n",
     "    while (conv > conv_tol) and (it <= max_iter):\n",
     "        it += 1\n",
-    "        new_hmm_params, dat_prob = mv_BaumWelch(old_hmm_params, emit_weights, old_cst_params)\n",
-    "        if emit_opt:\n",
-    "            emit_opt(*args) #args to be passed in and defined later.\n",
+    "        new_hmm_params, dat_prob = mv_BaumWelch(old_hmm_params, emit_weights, cst_params)\n",
+    "        #if emit_opt:\n",
+    "            #emit_opt(*args) #args to be passed in and defined later.\n",
     "        conv = np.linalg.norm(new_hmm_params[0] - old_hmm_params[0]) #stopping criterion based on just transition matrix\n",
     "        old_hmm_params = new_hmm_params\n",
-    "        \n",
-    "    return new_hmm_params"
+    "\n",
+    "    print(new_hmm_params[0].shape)\n",
+    "    return old_hmm_params"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "id": "c511919b-c96e-4967-88ca-6d4319a3d02f",
+   "execution_count": 51,
+   "id": "c8d41307-db6d-4bb1-9d47-0d0b2952bba3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def mv_BaumWelch(obs, hmm, cst, sat = True, emit_opt = None):\n",
-    "    '''\n",
-    "    Baum-Welch algorithm that computes the moments in the M-step and returns the optimal init,tmat.\n",
-    "    If emissions also need to be optimized, then need to pass a optimizing function to emit_opt\n",
-    "    '''\n",
-    "    #Initialize and convert all quantities  to np.arrays\n",
-    "    aux_space = list(itertools.product([True, False], repeat=cst.aux_size))\n",
-    "    T = len(obs)\n",
-    "    K = len(hmm.states)\n",
-    "    M = len(aux_space)\n",
-    "    sat = True\n",
-    "    \n",
-    "    state_ix = {s: i for i, s in enumerate(hmm.states)}\n",
-    "    aux_ix = {s: i for i, s in enumerate(aux_space)}\n",
-    "    \n",
-    "    tmat = np.zeros((K,K))\n",
-    "    initprob_vec = np.zeros(K)\n",
-    "    \n",
-    "    for i in hmm.states:\n",
-    "        initprob_vec[state_ix[i]] = hmm.initprob[i]\n",
-    "        for j in hmm.states:\n",
-    "            tmat[state_ix[i],state_ix[j]] = hmm.tprob[i,j]\n",
-    "    \n",
-    "    ind = np.zeros((M,K,M))\n",
-    "    init_ind = np.zeros((M,K))\n",
-    "    final_ind = np.zeros(M)\n",
-    "    \n",
-    "    for r in aux_space:\n",
-    "        final_ind[aux_ix[r]] = cst.cst_fun(r,sat)\n",
-    "        for i in hmm.states:\n",
-    "            init_ind[aux_ix[r],state_ix[i]] = cst.init_fun(i,r)\n",
-    "            for s in aux_space:\n",
-    "                ind[aux_ix[r],state_ix[i],aux_ix[s]] = cst.update_fun(r,i,s)\n",
-    "\n",
-    "    #Compute emissions weights for easier access\n",
-    "    emit_weights = np.zeros((T,K))\n",
-    "    for t in range(T):\n",
-    "        emit_weights[t] = np.array([hmm.eprob[k,obs[t]] for k in hmm.states])\n",
-    "\n",
-    "    #Initialize first \n",
-    "    alpha = np.empty((T,K,M))\n",
-    "    beta = np.empty(alpha.shape)\n",
-    "    \n",
-    "    curr_emits = np.array([hmm.eprob[k,obs[1]] for k in hmm.states])\n",
-    "    alpha[0] = np.einsum('i,i,ri -> ir',curr_emits, initprob_vec,init_ind)\n",
-    "    beta[-1] = 1\n",
-    "\n",
-    "    #Compute the forward pass\n",
-    "    for t in range(1,T):\n",
-    "        if t == (T-1):\n",
-    "            alpha[t] = np.einsum('i,ji,ris,js,r->ir', emit_weights[t], tmat, ind, alpha[t-1], final_ind)\n",
-    "        else:\n",
-    "            alpha[t] = np.einsum('i,ji,ris,js->ir', emit_weights[t], tmat, ind, alpha[t-1])\n",
-    "    \n",
-    "    #Compute the backward pass\n",
-    "    for t in range(1,T):\n",
-    "        if t == 1:\n",
-    "            beta[T-1-t] = np.einsum('js,j,ij,sjr,s->ir', beta[T-t],emit_weights[T-t],tmat,ind, final_ind)\n",
-    "        else:\n",
-    "            beta[T-1-t] = np.einsum('js,j,ij,sjr->ir', beta[T-t],emit_weights[T-t],tmat,ind)\n",
-    "    \n",
-    "    #Compute P(Y,C=c), probability of observing emissions AND the constraint in the specified truth configuration \n",
-    "    prob_data  = np.einsum('ir,ir->',alpha[0],beta[0]) #doesn't matter which time index. all give same\n",
-    "\n",
-    "    #Compute first/second moments in M step\n",
-    "    gamma = 1/prob_data*np.einsum('tir,tir->ti',alpha,beta)\n",
-    "    xi = 1/prob_data*np.einsum('tjr,tk,jk,skr,tks->tjk',alpha[:(T-1)],emit_weights[1:],tmat,ind,beta[1:])\n",
-    "\n",
-    "    #Compute the optimal estimates\n",
-    "    pi_opt = gamma[0]/gamma[0].sum()\n",
-    "    tmat_opt = xi.sum(axis = 0)/xi.sum(axis = (0,2))[:,np.newaxis]\n",
-    "\n",
-    "    return pi_opt,tmat_opt,prob_data"
+    "obs = ['C','C','A','C','A','C']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "05bfe9d9-f8c8-4cb3-8bf3-464866edae69",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hmm_params, cst_params = arrayConvert(obs, hmm, cst, True)\n",
+    "emit_weights = compute_emitweights(obs,hmm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "a41a8354-ed1c-43ae-97a6-ff7d1abbee55",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "too many values to unpack (expected 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[63], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m new_params \u001b[38;5;241m=\u001b[39m \u001b[43mmv_BaumWelch\u001b[49m\u001b[43m(\u001b[49m\u001b[43mhmm_params\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43memit_weights\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcst_params\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[10], line 21\u001b[0m, in \u001b[0;36mmv_BaumWelch\u001b[0;34m(hmm_params, emit_weights, cst_params)\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m'''\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;124;03mBaum-Welch algorithm that computes the moments in the M-step and returns the optimal init,tmat.\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;124;03mOptimiziation of emissions will be handled separately since it's disribution-dependent. \u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[38;5;124;03mthe updated tmat, init_prob\u001b[39;00m\n\u001b[1;32m     19\u001b[0m \u001b[38;5;124;03m'''\u001b[39;00m\n\u001b[1;32m     20\u001b[0m \u001b[38;5;66;03m#Initialize and convert all quantities  to np.arrays\u001b[39;00m\n\u001b[0;32m---> 21\u001b[0m tmat, init_prob \u001b[38;5;241m=\u001b[39m hmm_params\n\u001b[1;32m     22\u001b[0m init_ind, final_ind, ind \u001b[38;5;241m=\u001b[39m cst_params\n\u001b[1;32m     23\u001b[0m T \u001b[38;5;241m=\u001b[39m emit_weights\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m]\n",
+      "\u001b[0;31mValueError\u001b[0m: too many values to unpack (expected 2)"
+     ]
+    }
+   ],
+   "source": [
+    "new_params = mv_BaumWelch(hmm_params, emit_weights, cst_params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "be9fb1d9-71de-4d41-9bc2-c769e034b491",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_params2, dat_prob = mv_BaumWelch(new_params, emit_weights, cst_params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "127b8ec3-8ab8-4e49-be8f-dfa43cd97254",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.0824044 , 0.28884233, 0.62875327],\n",
+       "       [0.36987307, 0.41082032, 0.21930661],\n",
+       "       [0.49758226, 0.30373968, 0.19867806]])"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_params2[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "610ccaac-9489-4197-ba51-7fef432f8131",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "hmm_params, dat_prob = mv_EM(obs, hmm, cst, sat = True, max_iter = 100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "1a1314c8-6a83-4737-9c49-cd5e534bf6e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.17759483e-45, 7.57443401e-11, 1.00000000e+00])"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hmm_params[0]"
    ]
   },
   {
@@ -938,6 +973,14 @@
     "    '''\n",
     "    alpha = np.empty((len(obs), len(hmm.states), ))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "55efeae0-de23-4928-9fe8-07463a59f0d5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
