fixed typo in Viterbi_v2

--- a/conin/mediation_variables/Viterbi_v2.ipynb
+++ b/conin/mediation_variables/Viterbi_v2.ipynb
@@ -12,7 +12,7 @@
     "from munch import Munch\n",
     "import itertools\n",
     "from mv_Viterbi import mv_Viterbi\n",
-    "from cst_aggregate import cst_aggregatel"
+    "from cst_aggregate import cst_aggregate"
    ]
   },
   {
