--- a/conin/mediation_variables/Viterbi_v2.ipynb
+++ b/conin/mediation_variables/Viterbi_v2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "c5a243af-db56-44e7-af89-1782eec95667",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
     "from munch import Munch\n",
     "import itertools\n",
     "from mv_Viterbi import mv_Viterbi\n",
-    "from cst_aggregate import cst_aggregatel"
+    "from cst_aggregate import cst_aggregate"
    ]
   },
   {
