committing current changes

--- a/conin/mediation_variables/EM_v1.ipynb
+++ b/conin/mediation_variables/EM_v1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "c5a243af-db56-44e7-af89-1782eec95667",
    "metadata": {},
    "outputs": [],
@@ -11,7 +11,8 @@
     "import warnings\n",
     "from munch import Munch\n",
     "import itertools\n",
-    "import mv_EM as mv\n",
+    "import mv_EM as em\n",
+    "import mv_Viterbi as vit \n",
     "from cst_aggregate import cst_aggregate"
    ]
   },
@@ -57,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "id": "9c49caa1-f703-4878-9114-fc57cb03ab53",
    "metadata": {},
    "outputs": [],
@@ -96,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "id": "cefac4ef-bb55-41a3-bb1d-748192162043",
    "metadata": {},
    "outputs": [],
@@ -131,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "id": "182cffcc-729b-4c0d-babe-5050c249622a",
    "metadata": {},
    "outputs": [],
@@ -151,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "id": "538fb16b-9480-47f3-a9a8-3b41238063ea",
    "metadata": {},
    "outputs": [],
@@ -161,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "id": "10aa2f18-d03a-45f0-8488-e54eeca5f964",
    "metadata": {},
    "outputs": [
@@ -171,30 +172,62 @@
        "<module 'mv_EM' from '/home/fyqiu/Projects/conin/conin/mediation_variables/mv_EM.py'>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import importlib\n",
-    "importlib.reload(mv)"
+    "importlib.reload(em)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "id": "87800de1-0a15-446a-926a-e7dc06166695",
    "metadata": {},
    "outputs": [],
    "source": [
-    "hmm_params = mv.mv_EM(obs, hmm, precedence_cst, sat = True)"
+    "hmm_params, prob_data = em.mv_EM(obs, hmm, precedence_cst, sat = True, debug = True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "d7324f30-3f02-4ddd-82d0-5f148c472635",
+   "execution_count": 30,
+   "id": "095ca54e-b743-4a76-b3d0-06fe98511960",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.00100276, 0.00100276, 0.00100276, 0.00100276, 0.00100276,\n",
+       "       0.00100276, 0.00100276, 0.00100276, 0.00100276, 0.00100276])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prob_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "b2186c62-aa09-4e66-b654-111b65bdfb84",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tmat_est, initprob_est = hmm_params"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "c5a6d68d-4645-4f5e-b591-a19e3ffa125e",
    "metadata": {},
    "outputs": [
     {
@@ -205,50 +238,59 @@
        "       [2.09138783e-001, 4.72691149e-001, 3.18170068e-001]])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "hmm_params[0]"
+    "tmat_est"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "1c833975-3d43-4d05-954e-68683594ca69",
+   "execution_count": 32,
+   "id": "caac6b8e-70fb-42f6-bfd7-ebfaa5f2fdc2",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'mv_Viterbi' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[8], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m opt_aug, opt_state \u001b[38;5;241m=\u001b[39m \u001b[43mmv_Viterbi\u001b[49m(obs, hmm, precedence_cst, sat \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'mv_Viterbi' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "array([7.89430443e-47, 1.00000000e+00, 0.00000000e+00])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "opt_aug, opt_state = mv_Viterbi(obs, hmm, precedence_cst, sat = True)"
+    "initprob_est"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
+   "id": "1c833975-3d43-4d05-954e-68683594ca69",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "opt_aug, opt_state = vit.mv_Viterbi(obs, hmm, precedence_cst, sat = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "id": "09697322-d13c-486b-a8b8-918b6c397d8f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['b', 'b', 'a', 'c', 'a', 'c']"
+       "['b', 'b', 'a', 'c', 'a', 'c', 'c', 'c', 'a', 'a']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
