--- a/conin/mediation_variables/working.ipynb
+++ b/conin/mediation_variables/working.ipynb
@@ -46,6 +46,124 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "3601357d-1c84-4aab-b638-b4a0ac32b5b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def random_draw(p):\n",
+    "    '''\n",
+    "    p is a 1D np array. \n",
+    "    single random draw from probability vector p and encode as 1-hot.\n",
+    "    '''\n",
+    "    n = len(p)\n",
+    "    draw = np.random.choice(n,p=p)\n",
+    "    one_hot = np.zeros(n, dtype = int)\n",
+    "    one_hot[draw] = 1\n",
+    "    return one_hot\n",
+    "\n",
+    "def simulation(self,time):\n",
+    "    '''\n",
+    "    generates a full run for specified time.\n",
+    "    '''\n",
+    "\n",
+    "    #Generate (X1,Y1)\n",
+    "    x_prev = self.random_draw(self.init_dist)\n",
+    "    x_list = [x_prev]\n",
+    "    y_list = [self.random_draw(x_prev @ self.emit)]\n",
+    "\n",
+    "    #Generate rest\n",
+    "    for t in range(time-1):\n",
+    "        x_curr = self.random_draw(x_prev @ self.tmat)\n",
+    "        y_curr = self.random_draw(x_curr @ self.emit)\n",
+    "        x_list.append(x_curr)\n",
+    "        y_list.append(y_curr)\n",
+    "        x_prev = x_curr\n",
+    "\n",
+    "    return x_list, y_list\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "acc3c50b-0314-471c-9786-e7e5b8f09bad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def random_draw(p):\n",
+    "    '''\n",
+    "    p is a 1D np array. \n",
+    "    single random draw from probability vector p and encode as 1-hot.\n",
+    "    '''\n",
+    "    n = len(p)\n",
+    "    draw = np.random.choice(n,p=p)\n",
+    "    one_hot = np.zeros(n, dtype = int)\n",
+    "    one_hot[draw] = 1\n",
+    "    return one_hot\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "93bb3f2b-9307-452e-84c1-573258266e9a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def hmm2np(hmm):\n",
+    "    '''\n",
+    "    Converts/generates relevant parameters/weights into numpy array.\n",
+    "    '''\n",
+    "    #Initialize and convert all quantities  to np.arrays\n",
+    "    K = len(hmm.states)\n",
+    "    \n",
+    "    state_ix = {s: i for i, s in enumerate(hmm.states)}\n",
+    "\n",
+    "    #Compute the hmm parameters\n",
+    "    tmat = np.zeros((K,K))\n",
+    "    init_prob = np.zeros(K)\n",
+    "\n",
+    "    for i in hmm.states:\n",
+    "        init_prob[state_ix[i]] = hmm.initprob[i]\n",
+    "        for j in hmm.states:\n",
+    "            tmat[state_ix[i],state_ix[j]] = hmm.tprob[i,j]\n",
+    "\n",
+    "    return tmat, init_prob\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c34f280-7477-4dea-b818-298403456a0e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def simulate(hmm,T):\n",
+    "    '''\n",
+    "    Given hmm, generates sequence of length T\n",
+    "    '''\n",
+    "    tmat, init_prob = hmm2np(hmm)\n",
+    "    \n",
+    "    for i in range(T):\n",
+    "        if i == 0:\n",
+    "            x_prev = random_draw(init_prob)\n",
+    "            hidden_list = [x_prev]\n",
+    "            emit_list = [random_draw(x_prev @ tmat)]\n",
+    "    \n",
+    "\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9d1e3d5b-0eb6-4727-bd58-0b6f142d5a4d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "25a0b07c-79f9-4204-974b-8cdcf175bfb6",
    "metadata": {},
