logic for importing processes, delays, mixture emissions, etc.

--- a/conin/mediation_variables/Viterbi_v2.ipynb
+++ b/conin/mediation_variables/Viterbi_v2.ipynb
@@ -157,12 +157,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "538fb16b-9480-47f3-a9a8-3b41238063ea",
    "metadata": {},
    "outputs": [],
    "source": [
     "obs = ['C','C','A','C','A','C']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "b5d4f81b-8890-4e7c-ac18-9922d7f77407",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Vitberi' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m opt_state \u001b[38;5;241m=\u001b[39m \u001b[43mmv_Viterbi\u001b[49m\u001b[43m(\u001b[49m\u001b[43mobs\u001b[49m\u001b[43m,\u001b[49m\u001b[43mhmm\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/Projects/conin/conin/mediation_variables/mv_Viterbi.py:59\u001b[0m, in \u001b[0;36mmv_Viterbi\u001b[0;34m(obs, hmm, cst, sat)\u001b[0m\n\u001b[1;32m     48\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m'''\u001b[39;00m\n\u001b[1;32m     49\u001b[0m \u001b[38;5;124;03mDoes Viterbii with intermediate variables. In this version, the constraint is included as an binary emission at the last time. \u001b[39;00m\n\u001b[1;32m     50\u001b[0m \u001b[38;5;124;03mThis formulation allows us to easily with inference in the case where the constraint is satisfied or not.\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     56\u001b[0m \u001b[38;5;124;03m\u001b[39;00m\n\u001b[1;32m     57\u001b[0m \u001b[38;5;124;03m'''\u001b[39;00m\n\u001b[1;32m     58\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m cst \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m---> 59\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mVitberi\u001b[49m(obs,hmm)\n\u001b[1;32m     60\u001b[0m aux_space \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(itertools\u001b[38;5;241m.\u001b[39mproduct([\u001b[38;5;28;01mTrue\u001b[39;00m, \u001b[38;5;28;01mFalse\u001b[39;00m], repeat\u001b[38;5;241m=\u001b[39mcst\u001b[38;5;241m.\u001b[39maux_size)) \u001b[38;5;66;03m#create list of auxillary state to iterate over\u001b[39;00m\n\u001b[1;32m     61\u001b[0m val \u001b[38;5;241m=\u001b[39m {} \u001b[38;5;66;03m#initialize value dictionary\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'Vitberi' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "opt_state = mv_Viterbi(obs,hmm)"
    ]
   },
   {
