--- a/conin/mediation_variables/apt_experiments.ipynb
+++ b/conin/mediation_variables/apt_experiments.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 107,
    "id": "76353080-0eb8-4b9b-b16c-347a06ff395f",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 108,
    "id": "cab3826f-baa6-4d36-96ec-baa23745d8fb",
    "metadata": {},
    "outputs": [
@@ -34,7 +34,7 @@
        "<module 'apt_helper' from '/home/fyqiu/Projects/conin/conin/mediation_variables/apt_helper.py'>"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 109,
    "id": "2d6901ae-d7e7-4556-897b-9287335f881f",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 110,
    "id": "18f7981d-c8c3-484c-88ee-0b122c440925",
    "metadata": {},
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 111,
    "id": "ae7c4e77-0c85-46b9-abcc-593081b12f08",
    "metadata": {},
    "outputs": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 112,
    "id": "183d25d7-a257-4e1f-939e-9b28a08b6070",
    "metadata": {},
    "outputs": [
@@ -110,7 +110,7 @@
        "<module 'apt_cst_aggregate' from '/home/fyqiu/Projects/conin/conin/mediation_variables/apt_cst_aggregate.py'>"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 113,
    "id": "5510decc-476a-4743-8616-1c91dcc94ede",
    "metadata": {},
    "outputs": [],
@@ -140,12 +140,12 @@
     "        curr_cst.dependency = module.dependency\n",
     "    cst_list.append(curr_cst)\n",
     "\n",
-    "cst_list = cst_list[:2]"
+    "cst_list = cst_list[:3]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 114,
    "id": "543df740-96d9-46f2-bb7d-6caac401dfc2",
    "metadata": {},
    "outputs": [],
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 115,
    "id": "d0a1957c-c5b9-42b2-9100-e67efacef7cd",
    "metadata": {},
    "outputs": [],
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 116,
    "id": "35f8d77e-efd9-4e07-b912-071ee517ba7a",
    "metadata": {},
    "outputs": [
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 117,
    "id": "4ef70c6b-7c60-4eec-b968-4a495fd0542a",
    "metadata": {},
    "outputs": [],
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 118,
    "id": "09d29dbc-11c3-4a8c-93fe-7fe1ba9ad29c",
    "metadata": {},
    "outputs": [],
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 119,
    "id": "e405d691-05db-461d-bc8a-572c06f1e96e",
    "metadata": {},
    "outputs": [],
@@ -217,41 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
-   "id": "7aee8125-5083-44b0-b85a-30ade2a7f121",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_r = (True,) *agg_cst.aux_size\n",
-    "test_r_past =  (False,) *agg_cst.aux_size\n",
-    "test_k = tier_apt.states[0]\n",
-    "test_k_past = tier_apt.states[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 135,
-   "id": "f7742682-ec74-41df-b1b0-6ab1c1291859",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Munch({'name': 'know_sally_exists', 'aux_size': 2, 'update_fun': <function update_fun at 0x7f241c542340>, 'init_fun': <function init_fun at 0x7f24043eac00>, 'cst_fun': <function cst_fun at 0x7f24043ea520>})"
-      ]
-     },
-     "execution_count": 135,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cst_list[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 121,
    "id": "bfd793a6-eba0-4a10-82e5-28236f7ef118",
    "metadata": {},
    "outputs": [
@@ -261,7 +227,7 @@
        "<module 'mv_Viterbi' from '/home/fyqiu/Projects/conin/conin/mediation_variables/mv_Viterbi.py'>"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +238,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": null,
+   "id": "a24fab38-3257-40a9-b308-a51c92faf4bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(tier_apt.hmm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
    "id": "32a81a99-e5db-4ea4-ac09-2402fc45908c",
    "metadata": {},
    "outputs": [
@@ -282,71 +258,25 @@
      "text": [
       "1\n",
       "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "10\n",
-      "11\n",
-      "12\n",
-      "13\n",
-      "14\n",
-      "15\n",
-      "16\n",
-      "17\n",
-      "18\n",
-      "19\n",
-      "20\n",
-      "21\n",
-      "22\n",
-      "23\n",
-      "24\n",
-      "25\n",
-      "26\n",
-      "27\n",
-      "28\n",
-      "29\n",
-      "30\n",
-      "31\n",
-      "32\n",
-      "33\n",
-      "34\n",
-      "35\n",
-      "36\n",
-      "37\n",
-      "38\n",
-      "39\n",
-      "40\n",
-      "41\n",
-      "42\n",
-      "43\n",
-      "44\n",
-      "45\n",
-      "46\n",
-      "47\n",
-      "48\n",
-      "49\n"
+      "3\n"
      ]
     },
     {
-     "ename": "TypeError",
-     "evalue": "'bool' object is not subscriptable",
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
      "output_type": "error",
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[137]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m sat = (\u001b[38;5;28;01mTrue\u001b[39;00m,) * \u001b[32m2\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m opt_aug, opt_state =  \u001b[43mmv\u001b[49m\u001b[43m.\u001b[49m\u001b[43mmv_Viterbi_v2\u001b[49m\u001b[43m(\u001b[49m\u001b[43mobs\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43mcombined_emits\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mhmm\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43mtier_apt\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcst\u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43magg_cst\u001b[49m\u001b[43m,\u001b[49m\u001b[43msat\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Projects/conin/conin/mediation_variables/mv_Viterbi.py:144\u001b[39m, in \u001b[36mmv_Viterbi_v2\u001b[39m\u001b[34m(obs, hmm, cst, sat)\u001b[39m\n\u001b[32m    142\u001b[39m             argmax = (j,s)\n\u001b[32m    143\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m t == (\u001b[38;5;28mlen\u001b[39m(obs)-\u001b[32m1\u001b[39m): \u001b[38;5;66;03m#ie. at the last time we add in the constraint\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m144\u001b[39m     val[t,k,r] = max_val*hmm.eprob[k,obs[t]]*\u001b[43mcst\u001b[49m\u001b[43m.\u001b[49m\u001b[43mcst_fun\u001b[49m\u001b[43m(\u001b[49m\u001b[43mk\u001b[49m\u001b[43m,\u001b[49m\u001b[43mr\u001b[49m\u001b[43m,\u001b[49m\u001b[43msat\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    145\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m    146\u001b[39m     val[t,k,r] = max_val*hmm.eprob[k,obs[t]]\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Projects/conin/conin/mediation_variables/apt_cst_aggregate.py:26\u001b[39m, in \u001b[36mcreate_cstfun.<locals>.cst_fun_agg\u001b[39m\u001b[34m(k, r, sat)\u001b[39m\n\u001b[32m     24\u001b[39m it = \u001b[32m0\u001b[39m\n\u001b[32m     25\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m cst,ix, depend \u001b[38;5;129;01min\u001b[39;00m zip_list:\n\u001b[32m---> \u001b[39m\u001b[32m26\u001b[39m     val*= cst.cst_fun(k,\u001b[38;5;28mtuple\u001b[39m(r[ix[\u001b[32m0\u001b[39m]:ix[\u001b[32m1\u001b[39m]]),\u001b[43msat\u001b[49m\u001b[43m[\u001b[49m\u001b[43mit\u001b[49m\u001b[43m]\u001b[49m)\n\u001b[32m     27\u001b[39m     it += \u001b[32m1\u001b[39m\n\u001b[32m     28\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m val\n",
-      "\u001b[31mTypeError\u001b[39m: 'bool' object is not subscriptable"
+      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[122]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m sat = (\u001b[38;5;28;01mTrue\u001b[39;00m,) * \u001b[32m3\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m opt_aug, opt_state =  \u001b[43mmv\u001b[49m\u001b[43m.\u001b[49m\u001b[43mmv_Viterbi_v2\u001b[49m\u001b[43m(\u001b[49m\u001b[43mobs\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43mcombined_emits\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mhmm\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43mtier_apt\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcst\u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43magg_cst\u001b[49m\u001b[43m,\u001b[49m\u001b[43msat\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43msat\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Projects/conin/conin/mediation_variables/mv_Viterbi.py:139\u001b[39m, in \u001b[36mmv_Viterbi_v2\u001b[39m\u001b[34m(obs, hmm, cst, sat)\u001b[39m\n\u001b[32m    137\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m j \u001b[38;5;129;01min\u001b[39;00m hmm.states:\n\u001b[32m    138\u001b[39m     \u001b[38;5;28;01mfor\u001b[39;00m s \u001b[38;5;129;01min\u001b[39;00m aux_space:\n\u001b[32m--> \u001b[39m\u001b[32m139\u001b[39m         curr_val = val[t-\u001b[32m1\u001b[39m,j,s]*hmm.tprob[j,k]*\u001b[43mcst\u001b[49m\u001b[43m.\u001b[49m\u001b[43mupdate_fun\u001b[49m\u001b[43m(\u001b[49m\u001b[43mk\u001b[49m\u001b[43m,\u001b[49m\u001b[43mr\u001b[49m\u001b[43m,\u001b[49m\u001b[43mj\u001b[49m\u001b[43m,\u001b[49m\u001b[43ms\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    140\u001b[39m         \u001b[38;5;28;01mif\u001b[39;00m curr_val > max_val:\n\u001b[32m    141\u001b[39m             max_val = curr_val\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Projects/conin/conin/mediation_variables/apt_cst_aggregate.py:7\u001b[39m, in \u001b[36mcreate_updatefun.<locals>.update_fun_agg\u001b[39m\u001b[34m(k, r, k_past, r_past)\u001b[39m\n\u001b[32m      5\u001b[39m val = \u001b[32m1\u001b[39m\n\u001b[32m      6\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m cst, ix, depend \u001b[38;5;129;01min\u001b[39;00m zip_list:\n\u001b[32m----> \u001b[39m\u001b[32m7\u001b[39m     val *= cst.update_fun(k,\u001b[38;5;28;43mtuple\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mr\u001b[49m\u001b[43m[\u001b[49m\u001b[43mix\u001b[49m\u001b[43m[\u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m:\u001b[49m\u001b[43mix\u001b[49m\u001b[43m[\u001b[49m\u001b[32;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m,k_past,\u001b[38;5;28mtuple\u001b[39m(r_past[ix[\u001b[32m0\u001b[39m]:ix[\u001b[32m1\u001b[39m]]))\n\u001b[32m      8\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m depend:\n\u001b[32m      9\u001b[39m         val *= \u001b[38;5;28mint\u001b[39m(r[cst_ix[depend]] \u001b[38;5;129;01mor\u001b[39;00m (\u001b[38;5;129;01mnot\u001b[39;00m r[cst_ix[cst.name]])) \u001b[38;5;66;03m#either the dependcy is satisifed or the current knowledge hasn't been attained.\u001b[39;00m\n",
+      "\u001b[31mKeyboardInterrupt\u001b[39m: "
      ]
     }
    ],
    "source": [
-    "sat = (True,) * 2\n",
+    "sat = (True,) * 3\n",
     "opt_aug, opt_state =  mv.mv_Viterbi_v2(obs = combined_emits, hmm = tier_apt, cst= agg_cst,sat = sat)"
    ]
   },
